# test-gn

./: BUILD.gn  build.sh  readme.txt
inc/: bar.h  foo.h  useMultipleLibs.h  usePthread.h
inc/staticA/: staticA.h  staticAOne.h  staticATwo.h
src/: bar.cpp  foo.cpp  main.cpp  useMultipleLibs.cpp  usePthread.cpp
src/staticA/: staticA.cpp  staticAOne.cpp  staticATwo.cpp
