declare_args() {
    lib_pthread = ""
    oracle_version = ""
    third_party_source = ""
}

include_dirs = [
    "inc",
    "inc/staticA",
]

defines = [
    "DEFINE_FOR_ALL"
]

print("is_linux            : $is_linux")
print("target_os           : $target_os")
print("lib_pthread         : $lib_pthread")
print("oracle_version      : $oracle_version")
print("third_party_source  : $third_party_source")

executable("main") {
    sources = [
        "src/main.cpp",
    ]

    deps = [
        ":foo",
        ":bar",
        ":staticA",
        ":usePthread",
    ]
}

shared_library("foo") {
    sources = [
        "src/foo.cpp",
    ]

    defines += [ "DEFINE_FOR_FOO" ]
}

shared_library("bar") {
    sources = [
        "src/bar.cpp",
    ]

    deps = [
        ":foo",
    ]
}

shared_library("usePthread") {
    sources = [
        "src/usePthread.cpp",
    ]

    # ldflags = [
    #     "-pthread",
    # ]
    libs = [
        lib_pthread,
    ]
}

static_library("staticA") {
    sources = [
        "src/staticA/staticA.cpp",
        "src/staticA/staticAOne.cpp",
        "src/staticA/staticATwo.cpp",
    ]

    defines += [ "DEFINE_FOR_STATIC_A" ]
}
